HUDF-967: prevent wrapping of long phone # entries to 2nd line under recent calls section of me tab, tidy up bottom alignment of notification section, change 'Recent calls' to proper casing @jcheungfc

--- a/FJSHUD/app/styles/calls.less
+++ b/FJSHUD/app/styles/calls.less
@@ -344,11 +344,11 @@
 
 
   .RecentDate{
-    width:32%;
+    width:25%;
 
   }
   .RecentFromTo{
-    width:25%;
+    width:30%;
     text-align:center;
     &.call{
         cursor: pointer;
@@ -357,7 +357,7 @@
     }
  }
   .RecentDur{
-    width:14%;
+    width:15%;
     text-align:center;
   }
 }
